# customers/customers.js
@@ -7,5 +7,6 @@ router.post('/register',validator.validateCustomer,controller.registerCustomer)
 router.post('/login',validator.validateCustomer,controller.loginCustomer)
 router.post('/createBooking',controller.createBooking)
 router.post('/viewAllBookings',controller.viewAllBookings)
+// router.post('/logout',controller.logoutCustomer)
 
 module.exports = router
