# swagger.json
@@ -5,7 +5,7 @@
         "description": "Assignment 3",
         "title": "assignment 3"
     },
-    "host": "localhost:3002",
+    "host": "localhost:3032",
     "basePath": "/",
     "schemes": [
         "http"
@@ -220,6 +220,29 @@
                 }
             }
         },
+        "/customer/logout": {
+            "post": {
+                "tags": [
+                    "customer"
+                ],
+                "description": "Customer logout",
+                "parameters": [{
+                    "type": "string",
+                    "description": "token",
+                    "name": "token",
+                    "in": "formData"
+                }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successfully logged out"
+                    },
+                    "400": {
+                        "description": "Error in logging out"
+                    }
+                }
+            }
+        },
         "/customer/createBooking": {
             "post": {
                 "tags": [
@@ -407,7 +430,7 @@
                 }
             }
         },
-        "/driver/viewAssignedBookings": {
+        "/driver/viewAssigneMONGOokings": {
             "post": {
                 "tags": [
                     "driver"
